--- a/package.json
+++ b/package.json
@@ -1,82 +1,83 @@
 {
-  "name": "portfolio-builder",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^6.7.1",
-    "@dnd-kit/sortable": "^9.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@hookform/resolvers": "^3.9.1",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "@phosphor-icons/react": "^2.1.7",
-    "@prisma/client": "^6.0.1",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.3",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-email/components": "^0.0.31",
-    "@reduxjs/toolkit": "^2.4.0",
-    "@tanstack/react-query": "^5.62.2",
-    "@tanstack/react-table": "^8.20.5",
-    "@tiptap/extension-highlight": "^2.10.3",
-    "@tiptap/extension-image": "^2.10.3",
-    "@tiptap/extension-link": "^2.10.3",
-    "@tiptap/extension-text-align": "^2.10.3",
-    "@tiptap/extension-underline": "^2.10.3",
-    "@tiptap/react": "^2.10.3",
-    "@tiptap/starter-kit": "^2.10.3",
-    "@vercel/blob": "^0.27.0",
-    "axios": "^1.7.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.14.4",
-    "html-react-parser": "^5.2.0",
-    "lucide-react": "^0.464.0",
-    "next": "15.0.3",
-    "next-theme": "^0.1.5",
-    "next-themes": "^0.4.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.0",
-    "react-icons": "^5.4.0",
-    "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0",
-    "resend": "^4.0.1",
-    "sonner": "^1.7.0",
-    "svix": "^1.42.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+	"name": "portfolio-builder",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postinstall": "prisma generate"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^6.7.1",
+		"@dnd-kit/sortable": "^9.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
+		"@hookform/resolvers": "^3.9.1",
+		"@paralleldrive/cuid2": "^2.2.2",
+		"@phosphor-icons/react": "^2.1.7",
+		"@prisma/client": "^6.0.1",
+		"@radix-ui/react-accordion": "^1.2.1",
+		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-avatar": "^1.1.1",
+		"@radix-ui/react-collapsible": "^1.1.1",
+		"@radix-ui/react-context-menu": "^2.2.2",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-hover-card": "^1.1.3",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-navigation-menu": "^1.2.1",
+		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-radio-group": "^1.2.1",
+		"@radix-ui/react-scroll-area": "^1.2.1",
+		"@radix-ui/react-select": "^2.1.2",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-toggle-group": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.4",
+		"@react-email/components": "^0.0.31",
+		"@reduxjs/toolkit": "^2.4.0",
+		"@tanstack/react-query": "^5.62.2",
+		"@tanstack/react-table": "^8.20.5",
+		"@tiptap/extension-highlight": "^2.10.3",
+		"@tiptap/extension-image": "^2.10.3",
+		"@tiptap/extension-link": "^2.10.3",
+		"@tiptap/extension-text-align": "^2.10.3",
+		"@tiptap/extension-underline": "^2.10.3",
+		"@tiptap/react": "^2.10.3",
+		"@tiptap/starter-kit": "^2.10.3",
+		"@vercel/blob": "^0.27.0",
+		"axios": "^1.7.8",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^11.14.4",
+		"html-react-parser": "^5.2.0",
+		"lucide-react": "^0.464.0",
+		"next": "15.0.3",
+		"next-theme": "^0.1.5",
+		"next-themes": "^0.4.4",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.54.0",
+		"react-icons": "^5.4.0",
+		"react-redux": "^9.1.2",
+		"redux-persist": "^6.0.0",
+		"redux-thunk": "^3.1.0",
+		"resend": "^4.0.1",
+		"sonner": "^1.7.0",
+		"svix": "^1.42.0",
+		"tailwind-merge": "^2.5.5",
+		"tailwindcss-animate": "^1.0.7",
+		"usehooks-ts": "^3.1.0",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"eslint": "^8",
+		"eslint-config-next": "15.0.3",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1"
+	}
 }
