--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "prisma generate && next build",
 		"start": "next start",
 		"lint": "next lint",
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
-		"@clerk/nextjs": "^6.7.1",
+		"@clerk/nextjs": "^6.9.3",
 		"@dnd-kit/sortable": "^9.0.0",
 		"@dnd-kit/utilities": "^3.2.2",
 		"@hookform/resolvers": "^3.9.1",
