--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"build": "prisma generate && next build",
 		"start": "next start",
 		"lint": "next lint",
-		"postinstall": "prisma generate"
+		"postinstall": "prisma generate",
+		"vercel-build": "prisma generate && next build",
+		"prisma:generate": "prisma generate"
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^6.9.3",
@@ -16,7 +18,6 @@
 		"@hookform/resolvers": "^3.9.1",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@phosphor-icons/react": "^2.1.7",
-		"@prisma/client": "^6.0.1",
 		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-avatar": "^1.1.1",
@@ -75,9 +76,11 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@prisma/client": "^6.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "15.0.3",
 		"postcss": "^8",
+		"prisma": "^6.0.1",
 		"tailwindcss": "^3.4.1"
 	}
 }
