--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"axios": "^1.7.8",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cookies-js": "^1.2.3",
 		"cors": "^2.8.5",
 		"framer-motion": "^11.14.4",
 		"html-react-parser": "^5.2.0",
@@ -67,6 +68,7 @@
 		"react-icons": "^5.4.0",
 		"react-redux": "^9.1.2",
 		"redux-persist": "^6.0.0",
+		"redux-persist-cookie-storage": "^1.0.0",
 		"redux-thunk": "^3.1.0",
 		"resend": "^4.0.1",
 		"sonner": "^1.7.0",
