feat: add not-found page, add subdomain url matching

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,27 @@
 {
+	"headers": [
+		{
+			"source": "/(.*)",
+			"headers": [
+				{
+					"key": "Access-Control-Allow-Origin",
+					"value": "*"
+				}
+			]
+		}
+	],
+	"rewrites": [
+		{
+			"source": "/:path*",
+			"has": [
+				{
+					"type": "host",
+					"value": "(?<subdomain>[^.]+).spaark.dev"
+				}
+			],
+			"destination": "/:subdomain/:path*"
+		}
+	],
 	"builds": [
 		{
 			"src": "package.json",
