--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
 		"@tiptap/extension-underline": "^2.10.3",
 		"@tiptap/react": "^2.10.3",
 		"@tiptap/starter-kit": "^2.10.3",
+		"@vercel/analytics": "^1.4.1",
 		"@vercel/blob": "^0.27.0",
+		"@vercel/speed-insights": "^1.1.0",
 		"axios": "^1.7.8",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
