--- a/package.json
+++ b/package.json
@@ -50,9 +50,7 @@
 		"@tiptap/extension-underline": "^2.10.3",
 		"@tiptap/react": "^2.10.3",
 		"@tiptap/starter-kit": "^2.10.3",
-		"@vercel/analytics": "^1.4.1",
 		"@vercel/blob": "^0.27.0",
-		"@vercel/speed-insights": "^1.1.0",
 		"axios": "^1.7.8",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -64,6 +62,7 @@
 		"next": "15.0.3",
 		"next-theme": "^0.1.5",
 		"next-themes": "^0.4.4",
+		"posthog-js": "^1.203.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.54.0",
