--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@radix-ui/react-tooltip": "^1.1.4",
 		"@react-email/components": "^0.0.31",
 		"@reduxjs/toolkit": "^2.4.0",
+		"@tabler/icons-react": "^3.28.1",
 		"@tanstack/react-query": "^5.62.2",
 		"@tanstack/react-table": "^8.20.5",
 		"@tiptap/extension-highlight": "^2.10.3",
@@ -56,7 +57,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cors": "^2.8.5",
-		"framer-motion": "^11.14.4",
+		"framer-motion": "^11.16.1",
 		"html-react-parser": "^5.2.0",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.464.0",
@@ -68,6 +69,7 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.54.0",
 		"react-icons": "^5.4.0",
+		"react-parallax-tilt": "^1.7.272",
 		"react-redux": "^9.1.2",
 		"redux-persist": "^6.0.0",
 		"redux-persist-cookie-storage": "^1.0.0",
@@ -75,7 +77,7 @@
 		"resend": "^4.0.1",
 		"sonner": "^1.7.0",
 		"svix": "^1.42.0",
-		"tailwind-merge": "^2.5.5",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"usehooks-ts": "^3.1.0",
 		"uuid": "^11.0.4",
