--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cors": "^2.8.5",
+		"dayjs": "^1.11.13",
 		"framer-motion": "^11.16.1",
 		"html-react-parser": "^5.2.0",
 		"js-cookie": "^3.0.5",
