--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@phosphor-icons/react": "^2.1.7",
 		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
+		"@radix-ui/react-aspect-ratio": "^1.1.1",
 		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-collapsible": "^1.1.1",
@@ -74,6 +75,8 @@
 		"react-icons": "^5.4.0",
 		"react-parallax-tilt": "^1.7.272",
 		"react-redux": "^9.1.2",
+		"react-resizable-panels": "^2.1.7",
+		"react-zoom-pan-pinch": "^3.6.1",
 		"redux-persist": "^6.0.0",
 		"redux-persist-cookie-storage": "^1.0.0",
 		"redux-thunk": "^3.1.0",
@@ -81,6 +84,7 @@
 		"sonner": "^1.7.0",
 		"svix": "^1.42.0",
 		"tailwind-merge": "^2.6.0",
+		"tailwind-scrollbar-hide": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7",
 		"tiptap": "^1.32.2",
 		"usehooks-ts": "^3.1.0",
