--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
 		"@dnd-kit/sortable": "^9.0.0",
 		"@dnd-kit/utilities": "^3.2.2",
 		"@hookform/resolvers": "^3.9.1",
+		"@mdx-js/loader": "^3.1.0",
+		"@mdx-js/react": "^3.1.0",
+		"@next/mdx": "^15.1.6",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@phosphor-icons/react": "^2.1.7",
+		"@portabletext/react": "^3.2.0",
 		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
 		"@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -44,6 +48,10 @@
 		"@radix-ui/react-tooltip": "^1.1.4",
 		"@react-email/components": "^0.0.31",
 		"@reduxjs/toolkit": "^2.4.0",
+		"@sanity/client": "^6.27.2",
+		"@sanity/icons": "^3.5.7",
+		"@sanity/image-url": "^1.1.0",
+		"@sanity/vision": "^3.72.1",
 		"@tabler/icons-react": "^3.28.1",
 		"@tanstack/react-query": "^5.62.2",
 		"@tanstack/react-table": "^8.20.5",
@@ -61,10 +69,12 @@
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.13",
 		"framer-motion": "^11.16.1",
+		"gray-matter": "^4.0.3",
 		"html-react-parser": "^5.2.0",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.464.0",
 		"next": "15.0.3",
+		"next-sanity": "^9.8.46",
 		"next-theme": "^0.1.5",
 		"next-themes": "^0.4.4",
 		"novel": "^0.5.0",
@@ -81,7 +91,9 @@
 		"redux-persist-cookie-storage": "^1.0.0",
 		"redux-thunk": "^3.1.0",
 		"resend": "^4.0.1",
+		"sanity": "^3.72.1",
 		"sonner": "^1.7.0",
+		"styled-components": "^6.1.14",
 		"svix": "^1.42.0",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-scrollbar-hide": "^2.0.0",
