--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-switch": "^1.1.2",
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-toggle": "^1.1.0",
@@ -53,6 +54,7 @@
 		"@sanity/image-url": "^1.1.0",
 		"@sanity/vision": "^3.72.1",
 		"@tabler/icons-react": "^3.28.1",
+		"@tailwindcss/typography": "^0.5.16",
 		"@tanstack/react-query": "^5.62.2",
 		"@tanstack/react-table": "^8.20.5",
 		"@tiptap/extension-highlight": "^2.10.3",
