--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@tiptap/starter-kit": "^2.10.3",
 		"@vercel/blob": "^0.27.0",
 		"axios": "^1.7.8",
+		"axios-retry": "^4.5.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cors": "^2.8.5",
