--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@sanity/icons": "^3.5.7",
 		"@sanity/image-url": "^1.1.0",
 		"@sanity/vision": "^3.72.1",
+		"@sindresorhus/slugify": "^2.2.1",
 		"@tabler/icons-react": "^3.28.1",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tanstack/react-query": "^5.62.2",
@@ -105,6 +106,7 @@
 		"tailwind-scrollbar-hide": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7",
 		"tiptap": "^1.32.2",
+		"unique-names-generator": "^4.7.1",
 		"usehooks-ts": "^3.1.0",
 		"uuid": "^11.0.4",
 		"zod": "^3.23.8"
