--- a/package.json
+++ b/package.json
@@ -79,12 +79,14 @@
 		"gray-matter": "^4.0.3",
 		"html-react-parser": "^5.2.0",
 		"js-cookie": "^3.0.5",
+		"jszip": "^3.10.1",
 		"lucide-react": "^0.464.0",
 		"next": "15.0.3",
 		"next-sanity": "^9.8.46",
 		"next-theme": "^0.1.5",
 		"next-themes": "^0.4.4",
 		"novel": "^0.5.0",
+		"papaparse": "^5.5.2",
 		"posthog-js": "^1.203.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
