--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,15 @@
 		{
 			"source": "/(.*)",
 			"headers": [
+				{ "key": "Access-Control-Allow-Credentials", "value": "true" },
+				{ "key": "Access-Control-Allow-Origin", "value": "*" },
 				{
-					"key": "Access-Control-Allow-Origin",
-					"value": "*"
+					"key": "Access-Control-Allow-Methods",
+					"value": "GET, OPTIONS"
+				},
+				{
+					"key": "Access-Control-Allow-Headers",
+					"value": "Content-Type, Authorization, x-clerk-auth-status, x-clerk-auth-reason"
 				}
 			]
 		}
