Implement better-auth for authentication and enhance feature request functionality
- Integrated better-auth library for improved authentication handling, replacing previous methods.
- Updated the AuthPage component to support email and password sign-in, enhancing user experience.
- Added feature request models and routes in the Prisma schema for better user feedback management.
- Refactored portfolio API error handling for improved robustness.
- Introduced new UI elements for feature requests on the homepage, encouraging user engagement.
- Removed deprecated authentication files and streamlined session management.

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"@vercel/blob": "^0.27.0",
 		"axios": "^1.7.8",
 		"axios-retry": "^4.5.0",
+		"better-auth": "^1.2.12",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cors": "^2.8.5",
@@ -81,6 +82,7 @@
 		"js-cookie": "^3.0.5",
 		"jszip": "^3.10.1",
 		"lucide-react": "^0.464.0",
+		"motion": "^12.23.0",
 		"next": "15.0.3",
 		"next-sanity": "^9.8.46",
 		"next-theme": "^0.1.5",
