--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@next/mdx": "^15.1.6",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@phosphor-icons/react": "^2.1.7",
+		"@polar-sh/better-auth": "^1.0.6",
+		"@polar-sh/sdk": "^0.32.16",
 		"@portabletext/react": "^3.2.0",
 		"@radix-ui/react-accordion": "^1.2.1",
 		"@radix-ui/react-alert-dialog": "^1.1.2",
