Remove Sanity headless CMS

--- a/package.json
+++ b/package.json
@@ -51,10 +51,6 @@
 		"@radix-ui/react-tooltip": "^1.1.4",
 		"@react-email/components": "^0.0.31",
 		"@reduxjs/toolkit": "^2.4.0",
-		"@sanity/client": "^6.27.2",
-		"@sanity/icons": "^3.5.7",
-		"@sanity/image-url": "^1.1.0",
-		"@sanity/vision": "^3.72.1",
 		"@sindresorhus/slugify": "^2.2.1",
 		"@tabler/icons-react": "^3.28.1",
 		"@tailwindcss/typography": "^0.5.16",
@@ -74,6 +70,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cors": "^2.8.5",
+		"date-fns": "^4.1.0",
 		"dayjs": "^1.11.13",
 		"firebase": "^11.6.0",
 		"firebase-admin": "^13.3.0",
@@ -86,7 +83,6 @@
 		"lucide-react": "^0.464.0",
 		"motion": "^12.23.0",
 		"next": "15.0.3",
-		"next-sanity": "^9.8.46",
 		"next-theme": "^0.1.5",
 		"next-themes": "^0.4.4",
 		"novel": "^0.5.0",
@@ -104,7 +100,6 @@
 		"redux-persist-cookie-storage": "^1.0.0",
 		"redux-thunk": "^3.1.0",
 		"resend": "^4.0.1",
-		"sanity": "^3.72.1",
 		"sonner": "^1.7.0",
 		"styled-components": "^6.1.14",
 		"svix": "^1.42.0",
