--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^6.9.3",
+		"@dnd-kit/core": "^6.3.1",
 		"@dnd-kit/sortable": "^9.0.0",
 		"@dnd-kit/utilities": "^3.2.2",
 		"@hookform/resolvers": "^3.9.1",
