--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "portfolio-builder",
-	"version": "0.1.0",
+	"name": "Spaark",
+	"version": "0.2.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -20,6 +20,7 @@
 		"@mdx-js/loader": "^3.1.0",
 		"@mdx-js/react": "^3.1.0",
 		"@next/mdx": "^15.1.6",
+		"@next/swc-win32-x64-msvc": "^15.5.2",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@phosphor-icons/react": "^2.1.7",
 		"@polar-sh/better-auth": "^1.0.6",
@@ -52,6 +53,7 @@
 		"@react-email/components": "^0.0.31",
 		"@reduxjs/toolkit": "^2.4.0",
 		"@sindresorhus/slugify": "^2.2.1",
+		"@swc/core": "^1.13.5",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tanstack/react-query": "^5.62.2",
 		"@tanstack/react-table": "^8.20.5",
@@ -71,9 +73,6 @@
 		"cors": "^2.8.5",
 		"date-fns": "^4.1.0",
 		"dayjs": "^1.11.13",
-		"firebase": "^11.6.0",
-		"firebase-admin": "^13.3.0",
-		"flutterwave-node-v3": "^1.3.0",
 		"framer-motion": "^11.16.1",
 		"gray-matter": "^4.0.3",
 		"html-react-parser": "^5.2.0",
