--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 		"@mdx-js/loader": "^3.1.0",
 		"@mdx-js/react": "^3.1.0",
 		"@next/mdx": "^15.1.6",
-		"@next/swc-win32-x64-msvc": "^15.5.2",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@phosphor-icons/react": "^2.1.7",
 		"@polar-sh/better-auth": "^1.0.6",
@@ -80,7 +79,7 @@
 		"jszip": "^3.10.1",
 		"lucide-react": "^0.464.0",
 		"motion": "^12.23.0",
-		"next": "15.0.3",
+		"next": "^15.5.2",
 		"next-themes": "^0.4.4",
 		"novel": "^0.5.0",
 		"papaparse": "^5.5.2",
